# curvis

./: .gitignore  CMakeLists.txt  README.md
include/: nothing.h
pycurvis/: eval.ipynb  osc.sh  test.ipynb  tmp.ipynb  train.py  train_block.py
pycurvis/cfg/: nn_block.yaml  nn_block_half.yaml  nn_narrow.yaml
pycurvis/network/: network.py
test/: CMakeLists.txt  test.cpp  tmp.cpp
